added icons for notifications and strings for the offline sales

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -88,5 +88,6 @@
     <string name="failed_get_products">Falha para listar produtos</string>
     <string name="logout">Terminar sessão</string>
     <string name="dashboard_title">Dashboard</string>
+    <string name="sales_alert">Vendas</string>
 
 </resources>
