--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DemoApp</string>
+    <string name="app_name">MozCarbon</string>
     <string name="title_activity_login">Sign in</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
@@ -89,5 +89,12 @@
     <string name="logout">Terminar sessão</string>
     <string name="dashboard_title">Dashboard</string>
     <string name="sales_alert">Vendas</string>
+    <string name="failed_to_add_sale">Falha ao adicionar venda!</string>
+    <string name="add_sale_ok">Adicionou venda com sucesso!</string>
+    <string name="failed_to_add_sale_client_id">Erro no nome do cliente!</string>
+    <string name="failed_to_add_sale_product_id">Erro no nome do produto!</string>
+    <string name="failed_to_add_sale_processing">Erro ao processar a venda!</string>
+    <string name="info_alert_offline_sale_data">Esta venda só será enviada assim que estiver conectado a internet!</string>
+    <string name="open_invoices_folders">Abrir pasta dos recibos</string>
 
 </resources>
