Fragments(Client,Survey) toolbar titles fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,6 @@
     <string name="list_clients_title">Lista de Clientes</string>
     <string name="error_get_clients">Erro ao carregar Clientes</string>
     <string name="welcome_user">Bem-vindo Utilizador</string>
+    <string name="survey_title">Gestão de Inquéritos</string>
 
 </resources>
