--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,7 +82,7 @@
     <string name="product_not_sold">O produto ainda não foi vendido!</string>
     <string name="product_do_not_exists">Produto não existe no armazém!</string>
     <string name="product_not_found">Produto não encontrado!</string>
-    <string name="error_get_qr_code_data">Error no código do qr!</string>
+    <string name="error_get_qr_code_data">Error on QRCode!</string>
     <string name="info_alert_title">Informações</string>
     <string name="list_products">Lista de Produtos</string>
     <string name="failed_get_products">Falha para listar produtos</string>
