--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,9 @@
     <string name="error_get_products">Erro ao carregar produtos </string>
     <string name="error_get_sales">Erro ao carregar vendas</string>
     <string name="act_ref_street">Perto/Rua/Beco</string>
+    <string name="act_pr_use">Uso do fogão</string>
+    <string name="act_pr_type">Tipo do fogão</string>
+    <string name="act_agent">Armazém</string>
     <string name="act_nr_house">Nº da Casa</string>
     <string name="act_quart">Quarteirão</string>
     <string name="act_area">Bairro</string>
